debug running type handler commands in working dir
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@19389 4235af6a-31f9-0310-9ad3-ecf6348f2534